<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment"
    android:background="@color/bg_blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/friends_list"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_weight="3"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:src="@drawable/search"
            android:layout_weight="1"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/online_image_view"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:text="@string/online"
            android:textColor="@color/torch_red_light"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOnlineUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="1"
        tools:listitem="@layout/list_item_rv_online"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/all_friends"
            android:textColor="@color/torch_red_light"
            android:textSize="30sp"
            android:layout_weight="3"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:src="@drawable/add_friend"
            android:layout_weight="0.5"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:src="@drawable/dots_three"
            android:layout_weight="0.5"
            android:layout_gravity="center"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="5"
        tools:listitem="@layout/list_item_rv_all_friends"/>

</LinearLayout>